src/index.css
body {
  margin: 0;
  padding: 0;
  background-color: #EBF0F4;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

nav {
  display: flex;
  padding: 2%;
}

a {
  text-decoration: none;
  color: inherit;
}

nav a {
  font-family: 'Montserrat', sans-serif;
  text-decoration: none;
  font-size: 20px;
  color: #31335A;
}

nav a {
  margin-right: 1%;
  margin-left: 1%;
}

nav a:hover {
  text-decoration: overline;
}

header {
  font-family: 'Staatliches', cursive;
  color: #31335A;
  letter-spacing: 15px;
  font-size: 32px;
  text-align: center;
}

.card-filter {
  padding-left: 5%;
  padding-top: 2%;
}

.card-filter select {
  height: 30px;
  width: 150px;
  background-color: #fff;
  border-radius: 5px;
  font-family: 'Montserrat', sans-serif;
  font-size: 16px;
  font-variant: small-caps;
}

footer {
  display: flex;
  justify-content: center;
  margin-top: 4%;
  height: 100px;
  width: 100%;
  background-color: silver;
}

footer p {
  align-self: center;
  letter-spacing: 2px;
  font-family: 'Montserrat', sans-serif;
  color: #31335A;
}

.container {
  display: flex;
  justify-content: center;
  padding: 2%;
}

.quotes-container {
  width: 80%;
  display: flex;
  flex-direction: column;
}

.quote-card {
  display: flex;
  flex-direction: column;
  margin: 2% 1%;
  padding: 3%;
  border: 1px solid silver;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 2px 2px 4px silver;
}

.action-btns {
  display: flex;
  justify-content: space-around;
  align-items: center;
  position: relative;
    left: 80%;
  height: 20px;
  width: 15%;
}

.action-btn {
  height: 12px;
  width: 10%;
  border: 1px solid;
  border-radius: 100%;
  box-shadow: 1px 1px 1px gray;
}

.action-1 {
  background: rgb(33,121,9);
  background: radial-gradient(circle, rgba(33,121,9,1) 25%, rgba(5,36,0,1) 100%, rgba(11,255,0,1) 100%);
}

.action-2 {
  background: rgb(236,223,7);
  background: radial-gradient(circle, rgba(236,223,7,1) 50%, rgba(158,161,13,1) 100%, rgba(206,209,16,1) 100%);
}

.action-3 {
  background: rgb(236,7,7);
  background: radial-gradient(circle, rgba(236,7,7,1) 50%, rgba(74,11,11,1) 100%, rgba(112,8,8,1) 100%);
  cursor: pointer;
}

.action-1:hover {
  background: rgb(0,255,40);
  background: radial-gradient(circle, rgba(0,255,40,1) 50%, rgba(0,255,0,1) 100%, rgba(0,255,19,1) 100%);
  cursor: pointer;
}

.action-1:hover .green-label {
  visibility: visible;
}

.action-2:hover {
  background: rgb(239,255,0);
  background: radial-gradient(circle, rgba(239,255,0,1) 50%, rgba(255,254,0,1) 100%, rgba(251,255,0,1) 100%);
  cursor: pointer;
}

.action-3:hover {
  background: rgb(255,0,0);
  background: radial-gradient(circle, rgba(255,0,0,1) 50%, rgba(255,0,0,1) 100%, rgba(255,0,0,1) 100%);
}

.green-label {
  height: 20px;
  width: 130px;;
  position: relative;
    right: 400%;
    bottom: 250%;
  border: 1px solid;
  border-radius: 5px;
  text-align: center;
  color: #000;
  background-color: silver;
  opacity: 0.5;
  visibility: hidden;
}

.quote-title {
  font-family: 'Staatliches', cursive;
  font-size: 24px;
  color: #222;
  letter-spacing: 6px;
  padding-left: 2%;
  margin-top: 0;
  margin-bottom: 1%;
  text-shadow: 1px 1px 1px #555;
}

.quote-text {
  flex-basis: 80%;
  color: #2C3E50;
  font-family: 'Montserrat', sans-serif;
  letter-spacing: 2px;
  line-height: 1.8;
}

.undo-btn {
  display: flex;
  align-items: center;
  height: 30px;
  width: 90px;
  border: 1px solid;
  border-radius: 5px;
  background-color: #D14E4E;
  font-family: 'Montserrat', sans-serif;
  color: #fff;
  cursor: pointer;
}

.undo-btn:hover {
  background-color: #E62F2F;
}

.undo-btn p {
  font-size: 16px;
  padding-left: 18%;
  font-variant: small-caps;
}

.about {
  display: flex;
  flex-direction: column;
  padding: 2% 4%;
}

.about-title {
  text-align: center;
  font-size: 32px;
  font-family: 'Montserrat', sans-serif;
  font-weight: 300;
  font-variant: small-caps;
  letter-spacing: 4px;
  color: #222;
}

.about-text {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  color: #2C3E50;
  font-family: 'Montserrat', sans-serif;
  font-size: 20px;
  font-weight: 300;
  letter-spacing: 2px;
  line-height: 2;
}

@media only screen and (max-width: 768px) {
  header {
    font-size: 24px;
  }

  nav {
    display: flex;
    justify-content: center;
    padding: 2%;
  }

  nav a {
    margin-left: 6%;
    margin-right: 6%;
  }

  .quote-card {
    margin-top: 10%;
    margin-bottom: 10%;
  }

  .quote-author {
    position: relative;
      left: 40%;
  }
}

@media only screen and (min-width: 768px) {
  .quote-author {
    position: relative;
      left: 80%;
  }
}

